Alle Methoden im Model mit Tests abgedeckt, fehler mit spieleren die ineinander crashen behoben.